--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -146,6 +146,11 @@ window#waybar.hidden {
     padding: 6px 12px;
 
   }
+
+#window label {
+    color: white;
+}
+
 tooltip {
   border-radius: 8px;
   padding: 15px;
